--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(embedded_systems C)
 set(CMAKE_CXX_COMPILER "/usr/bin/clang-17")
 set(CMAKE_C_STANDARD 90)
 
-add_executable(embedded_systems main.c
+add_executable(embedded_systems
         hardware/stepper_motor.c
         hardware/LPC17xx.h)
