Updated hardware code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,9 @@ add_executable(embedded_systems
         hardware/stepper_motor.c
         hardware/LPC17xx.h
         hardware/seven_segment_display.c
-        hardware/buzzer.c)
+        hardware/buzzer.c
+        hardware/pulse_width_modulation.c
+        hardware/key_pad.c
+        hardware/lcd.h
+        hardware/external_interrupt.c
+)
